# nodelet

./: README.md  node-logs.py  pyproject.toml  requirements.txt
barcelona-targets/: barcelona  mp0  mp13  mp2  mp3  mp5  mp6  mp7  mp8  mp9
examples/: dma-logs.py  docker-login.py  passwrd  test
examples/barcelona-targets/: mp1  mp10  mp11  mp12  mp14  mp15  mp4
nodelet/: __init__.py  node.py  nodelet.py
nodelet/targets/: ra2_hosts.yaml
nodelet/utils/: list_targets.py  lookup_node.py
nodelet/utils/data/: _cvrt_ra2_hosts.py  nodes.yaml  ra2_hosts.yaml
testing/: get_hostname.py
