[tool.poetry]
name = "nodelet"
version = "0.1.0"
description = "A Python library to aid in scripting commands across multiple nodes."
authors = ["Keegan van Gemeren <76065987+k-vangemeren@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.4.1"
paramiko = "^2.7.2"
scp = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
